--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ code {
     monospace;
 }
 
+:root{
+  --toastify-toast-width: 400px;
+  --toastify-toast-min-height: 100px;
+}
+
 html {
   box-sizing: border-box;
   width: 100vw;
@@ -26,18 +31,13 @@ html {
   box-sizing: inherit;
 }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-  color: #212121;
-  background-color: #fff;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.Toastify__toast-body {
+  font-size: 20px;
 }
